# ctrlproxy

./: .bzrignore  .cvsignore  .gitignore  .travis.yml  AUTHORS  BUGS  COPYING  ChangeLog  DESIGN  Doxyfile  HACKING  Makefile  Makefile.in  Makefile.settings  Makefile.settings.in  NEWS  PLAN-2.8  README  README.md  TODO  UPGRADING  acinclude.m4  admin.c  admin.h  antiflood.c  autogen.sh  cache.c  changelog  cisg.c  client.c  client.h  common.i  conf.c  config.admin  config.c  config.default  config.example  config.guess  config.network  configure.ac  (+61 more)
.github/workflows/: ci.yml
contrib/: Makefile  service-ctrlproxy-run
daemon/: TODO  backend.c  backend.h  client.c  client.h  ctrlproxyd.c  ctrlproxyd.conf  ctrlproxyd.conf.example  daemon.h  main.c  user.c  user.h
debian/: README.Debian  changelog  control  copyright  ctrlproxy-dev.install  ctrlproxy.install  docs  examples  rules
doc/: .cvsignore  Makefile  Makefile.in  Makefile.settings.in  TODO  about.xml  admin.mod.xml  admin.xml  antiflood.mod.xml  auto-away.mod.xml  autosave.mod.xml  autosend.mod.xml  clients.xml  commands.xml  config-reference.xml  config.m4  configuration.xml  ctcp.mod.xml  ctrlproxy-admin.1.xml  ctrlproxy-setup-config.xsl  ctrlproxy.1.xml  ctrlproxy.xml  ctrlproxy_config.5.xml  ctrlproxyd.8.xml  ctrlproxyd.init  ctrlproxyrc.5.xml  dcc.mod.xml  debug.mod.xml  development.xml  docbook.xsl  faq.xml  filters.dia  functions.xml  help.xml  help.xsl  install.xml  introduction.xml  linestack.xml  linestack_file.mod.xml  linestack_memory.mod.xml  (+28 more)
example/: Makefile  README  README.md  admin_cmd.py  admin_template.py  example.py  foo.c  irc_simple.c  listener.py  stats.php  test.py  test2.py
lib/: client.c  client.h  connection.c  connection.h  irc.h  isupport.c  isupport.h  line.c  line.h  listener.c  listener.h  network.c  network.h  state.c  state.h  transport.c  transport.h  url.c  util.c  util.h
libirc/: Makefile  client.c  client.h  connection.c  connection.h  gnutls.c  irc.h  isupport.c  isupport.h  libirc.h  line.c  line.h  linestack.c  linestack.h  linestack_file.c  listener.c  listener.h  listener_quassel.c  listener_socks.c  quassel.h  redirect.c  redirect.h  socks.h  state.c  state.h  transport.c  transport.h  transport_ioc.c  url.c  url.h  util.c  util.h
libirc/python/: irc.c  irc.h  linestack.c  state.c  transport.c
libirc/python/tests/: test_irc.py
libirc/tools/: linestack-cmd.c
mods/: Makefile  Makefile.in  admin.c  admin.h  admin.i  antiflood.c  auto-away.c  auto_away.c  autosave.c  autosend.c  client_simple.c  ctcp.c  dcc.c  debug.c  gnutls.c  linestack_file.c  linestack_memory.c  linestack_sqlite.c  listener.c  listener.h  listener.i  log.c  log_custom.c  log_irssi.c  motd_file.c  network-gnutls.c  network-openssl.c  nickserv.c  noticelog.c  nss.c  openssl.c  perl.c  python.c  python2.c  python_types.c  repl_command.c  repl_highlight.c  repl_lastdisconnect.c  repl_limited.c  repl_memory.c  (+8 more)
mods/gnutls/: Makefile  Makefile.in  Makefile.settings.in  config.m4  gnutls.c
mods/lowbandwidth/: PROTOCOL
mods/nss/: Makefile  Makefile.in  Makefile.settings.in  config.m4  nss.c
mods/openssl/: Makefile  Makefile.in  Makefile.settings.in  config.m4  openssl.c
mods/python/: Makefile.in  config.m4  ctrlproxy_tools.py  python.c
mods/python2/: Makefile  Makefile.in  Makefile.settings.in  config.m4  ctrlproxy.i  python2.c  setup.py
mods/socket/: Makefile.in  config.m4  gnutls.c  nss.c  openssl.c  openssl.h  socket.c
mods/stats/: .cvsignore  Makefile.in  cisg.c  config.m4  printstats.c  stats-cisg.c  stats.c  statsutil.c  statsutil.h
mods/swig/: admin.i  common.i  config.m4  ctrlproxy.i  listener.i
po/: .cvsignore  ChangeLog  Makevars  POTFILES.in  nl.po
python/: ctrlproxy.c  irc.c
python/tests/: __init__.py  test_irc.py
rfctester/: Makefile  README  ircdtorture.c  test-random.c  test-simple.c
scripts/: Makefile  Makefile.in  irssilog-to-raw  upgrade.py
scripts/web/: Makefile  Makefile.in  server.py
scripts/web/includes/: default.tmpl  templayer.py
scripts/web/pages/: __init__.py  confirm.py  default.css  index.py  logout.py  modules.py  networks.py  scripts.py  tools.py
scripts/webconfig/: Makefile.in  webconfig.css  webconfig.py
scripts/webconfig/pages/: __init__.py  confirm.py  default.css  downloadconfig.py  index.py  modules.py  networks.py  test.py  tools.py
src/: admin-cmd.c  admin.c  admin.h  auto_away.c  cache.c  cache.h  client.c  client.h  ctcp.c  ctcp.h  ctcp_redirect.c  ctrlproxy.h  gen_config.c  gnutls.c  help.c  help.h  hooks.c  hooks.h  internals.h  irc.h  isupport.c  isupport.h  keyfile.c  keyfile.h  line.c  line.h  linestack-cmd.c  linestack.c  linestack.h  linestack_file.c  listener.c  listener.h  local.h  log.c  log.h  log_custom.c  log_subst.c  log_support.c  log_support.h  main.c  (+23 more)
testsuite/: .cvsignore  FILE_FOO  Makefile  Makefile.in  README  bench-linestack.py  common.pl  ctrlproxyrc.torture.in  ircdtorture.c  ircdtorture.h  mod-log-custom.pl  test-admin.c  test-client.c  test-cmp.c  test-ctcp.c  test-filter.c  test-help.c  test-isupport.c  test-line.c  test-linestack.c  test-log-subst.c  test-motd.c  test-network.c  test-networkinfo.c  test-nickserv.c  test-parser.c  test-random.c  test-redirect.c  test-simple.c  test-ssl.c  test-state.c  test-tls.c  test-transport.c  test-url.c  test-user.c  test-util.c  test1.data  test3.data  test4.data  testfile.pl  (+2 more)
win32/: CAboutDlg.cpp  CAboutDlg.h  CLogDlg.cpp  CLogDlg.h  CNetworksDlg.cpp  CNetworksDlg.h  CPluginsDlg.cpp  CPluginsDlg.h  CStatusDlg.cpp  CStatusDlg.h  ConfigurationDlg.cpp  ConfigurationDlg.h  EditChannel.cpp  EditChannel.h  EditListener.cpp  EditListener.h  EditNetworkDlg.h  EditServer.cpp  EditServer.h  MainDlg.cpp  MainDlg.h  NewNetworkDlg.cpp  NewNetworkDlg.h  README.txt  StdAfx.cpp  StdAfx.h  TODO  TrayNot.cpp  TrayNot.h  admin.dsp  antiflood.dsp  auto_away.dsp  autosave.dsp  ctcp.dsp  ctrlproxy.dsp  ctrlproxy.dsw  ctrlproxy.iss  ctrlproxy.rc  ctrlproxyDlg.cpp  ctrlproxyDlg.h  (+28 more)
